--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .a {
+        .body
+        .aa {
+            display:flex;
+            justify-conetnt:center;
             color:black;
         }
     </style>
 </head>
 <body>
-    <a href="us/index.html"></a>
-    <a href="ua/index.html"></a>
+    <div class="aa">    <a href="us/index.html"></a>
+    <a href="ua/index.html"></a></div></div>
 </body>
 </html>
