--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="../css/main_style.css">
+    <link rel="stylesheet" href="/css/main_style.css">
     <title>Omega Energy</title>
-    <script src="../js/nav_bar.js"></script>
-    <script src="../js/background.js"></script>
-    <script src="../js/footer.js"></script>
+    <script src="/js/nav_bar.js"></script>
+    <script src="/js/background.js"></script>
+    <script src="/js/footer.js"></script>
 
 </head>
 <body>
@@ -40,7 +40,7 @@
                     <a href="series1_drink1.html" class="button-buy"><span class="text">Find Out</span></a>
                 </div>
                 <div class="offer-image-container">
-                    <img src="../media/series1_all_index.png" alt="offer-photo" class="offer-product-image">
+                    <img src="/media/series1_all_index.png" alt="offer-photo" class="offer-product-image">
                 </div>
             </div>
         </section>
@@ -52,7 +52,7 @@
                 <div class="product-list-wrapper"> 
                     <div class="product-column"> 
                         <div class="product-card">
-                            <img src="../media/series1_drink2.png" alt="Product 1">
+                            <img src="/media/series1_drink2.png" alt="Product 1">
                             <h3>NIGHT CITY CALLS: BERRY</h3>
                             <p>$9.99</p>
                             <a href="series1_drink2.html" class="button-buy-product"><span>Buy now</span></a> 
@@ -60,7 +60,7 @@
                     </div>
                     <div class="product-column">
                         <div class="product-card">
-                            <img src="../media/series1_drink3.png" alt="Product 2">
+                            <img src="/media/series1_drink3.png" alt="Product 2">
                             <h3>NIGHT CITY CALLS: WATERMELON</h3>
                             <p>$9.99</p>
                             <a href="series1_drink3.html" class="button-buy-product"><span>Buy now</span></a>
