--- a/us/news.html
+++ b/us/news.html
@@ -27,11 +27,13 @@
             <h2 class="headline-text" data-text="OUR NEWS">OUR NEWS</h2>
         </div>
         <section class="hero-section" id="main-news">
-            <h2 class="hero-title">COLLABORATION</h2>
-            <video class="hero-video" src="../media/test.mp4" autoplay loop muted></video>
-            <div class="hero-text-container">
-                <p class="hero-description">Omega Energy</p>
-                <a href="#" class="btn">More</a>
+            <img class="hero-image" src="../media/full_poster.png">
+            <a href="series_ex_drink1" class="buy-collab-button">
+                <img class="hero-image-link" src="../media/full_poster_can_cut.png">
+            </a>
+            <div class="wrapper">
+                <div class="bg"> SWAG CHARGED </div>
+                <div class="fg"> SWAG CHARGED </div>
             </div>
         </section>
 
