--- a/us/contact_us.html
+++ b/us/contact_us.html
@@ -101,6 +101,7 @@
                 </div>
                 <div id="validationError" class="error-message" style="display: none;">Please fill out all required fields.</div>
                 <input type="hidden" name="apikey" value="f548e0b4-9ca7-4b49-8580-b335e7e0b38f">
+                <input type="hidden" name="redirect" value="https://web3forms.com/success">
             </form>
         </div>
     </main>
