--- a/ua/news.html
+++ b/ua/news.html
@@ -39,11 +39,13 @@
             <h2 class="headline-text" data-text="НАШІ НОВИНИ">НАШІ НОВИНИ</h2>
         </div>
         <section class="hero-section" id="main-news">
-            <h2 class="hero-title">СПІВПРАЦЯ</h2>
-            <video class="hero-video" src="../media/test.mp4" autoplay loop muted></video>
-            <div class="hero-text-container">
-                <p class="hero-description">Omega Energy</p>
-                <a href="#" class="btn">Більше</a>
+            <img class="hero-image" src="../media/full_poster.png">
+            <a href="series_ex_drink1.html" class="buy-collab-button">
+                <img class="hero-image-link" src="../media/full_poster_can_cut.png">
+            </a>
+            <div class="wrapper">
+                <div class="bg"> Заряд Сваги </div>
+                <div class="fg"> Заряд Сваги </div>
             </div>
         </section>
 
