--- a/ua/news.html
+++ b/ua/news.html
@@ -17,7 +17,7 @@
     <script src="../js/background.js" defer></script>
     <script src="../js/footer.js" defer></script>
     <style>
-        .news-feed h2, .news-card-title, .news-card-date, #load-more-btn {
+        .news-feed h2, .news-card-title, .news-card-date, #load-more-btn, .wrapper > div {
             font-family: "Tektur", sans-serif;
         }
         .news-card-title, #load-more-btn {
