--- a/ua/series_ex_drink1.html
+++ b/ua/series_ex_drink1.html
@@ -14,6 +14,11 @@
     <title>Omega Energy</title> <script src="../js/nav_bar.js" defer></script>
     <script src="../js/background.js" defer></script>
     <script src="../js/footer.js" defer></script>
+        <style>
+        .wrapper > div {
+            font-family: "Tektur", sans-serif;
+        }
+    </style>
 </head>
 <body>
     <div id="main-nav"></div>
