--- a/ua/series_ex_drink1.html
+++ b/ua/series_ex_drink1.html
@@ -15,7 +15,7 @@
     <script src="../js/background.js" defer></script>
     <script src="../js/footer.js" defer></script>
         <style>
-        .wrapper > div {
+        .wrapper > div, .section-title {
             font-family: "Tektur", sans-serif;
         }
     </style>
