--- a/us/nav_bar.html
+++ b/us/nav_bar.html
@@ -7,23 +7,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="../css/nav_style.css">
     <script src="../js/lang_switch.js" defer></script>
 </head>
 <body>
     <nav class="main-navigation">
         <div class="brand-area">
-            <a href="index.html" class="brand-img-link"><img src="../media/navbar_logo.png" alt="Logo" class="brand-img"></a>
+            <a href="index.html" class="brand-img-link">
+                <img src="../media/navbar_logo.png" alt="Logo" class="brand-img">
+            </a>
         </div>
+
+        <div class="a-container nav-offer-container">
+            <a href="series1_drink1.html" class="nav-link nav-offer-link">
+                <span class="condition"> New Offer</span><br>
+                <span class="condition"><i class="fa-solid fa-play fa-2xs"></i> New Offer</span>
+            </a>
+        </div>
+
         <ul class="nav-links">
-            <li>
-                <div class="a-container">
-                    <a href="series1_drink1.html" class="nav-offer-link nav-link">
-                        <span class="condition"> New Offer</span><br>
-                        <span class="condition"><i class="fa-solid fa-play fa-2xs"></i> New Offer</span>
-                    </a>
-                </div>
-            </li>
             <li>
                 <div class="a-container">
                     <a href="index.html" class="nav-link">
@@ -49,10 +52,13 @@
                 </div>
             </li>
         </ul>
+
         <div class="lang-button-container">
-            <a href="../ua/index.html" class="lang-button" data-lang="ua"><i class="fas fa-globe"></i><span>US</span></a>
+            <a href="../ua/index.html" class="lang-button" data-lang="ua">
+                <i class="fas fa-globe"></i><span>US</span>
+            </a>
         </div>
     </nav>
-    <script src="../js/lang_switch.js" defer></script>
-</body>
+
+    </body>
 </html>
