--- a/ua/index.html
+++ b/ua/index.html
@@ -44,7 +44,7 @@
                     <p class="offer-description">
                         Розслабся зі своїм приятелем-горилою у NIGHT CITY
                     </p>
-                    <a href="../series1_drink1.html" class="button-buy"><span class="text">Детальніше</span></a>
+                    <a href="series1_drink1.html" class="button-buy"><span class="text">Детальніше</span></a>
                 </div>
                 <div class="offer-image-container">
                     <img src="../media/series1_all_index.png" alt="фото пропозиції" class="offer-product-image"> 
