--- a/ua/series_ex_drink1.html
+++ b/ua/series_ex_drink1.html
@@ -28,8 +28,7 @@
     <main class="main-content-container">
 
         <section class="hero-section" id="main-hero">
-            <img class="hero-image" src="../media/ex_drink1_render.png" alt="Постер Колаборації Omega Energy x Omega Theft Auto"> <a href="series_ex_drink1.html" class="buy-collab-button">
-                купити </a>
+            <img class="hero-image" src="../media/ex_drink1_render.png" alt="Постер Колаборації Omega Energy x Omega Theft Auto">
             <div class="wrapper">
                 <div class="bg"> Заряд Сваги </div> <div class="fg"> Заряд Сваги </div> </div>
 
