--- a/ua/footer.html
+++ b/ua/footer.html
@@ -34,6 +34,7 @@
                         <li><a href="FAQ.html" class="footer-link">Поширені запитання</a></li>
                         <li><a href="contact_us.html" class="footer-link">Зв'яжіться з нами</a></li>
                         <li><a href="do_not_share.html" class="footer-link">Не продавати та не поширювати мою особисту інформацію</a></li>
+                        <li><a href="../" download="Сайт_вигаданого_бренду_енергетичних_напоїв_Omega_Energy_Макеєв_2.docx" class="footer-link">Документація</a></li>
                     </ul>
                 </div>
 
