--- a/us/footer.html
+++ b/us/footer.html
@@ -34,7 +34,7 @@
                         <li><a href="FAQ.html" class="footer-link">FAQs</a></li>
                         <li><a href="contact_us.html" class="footer-link">Contact Us</a></li>
                         <li><a href="do_not_share.html" class="footer-link">Do Not Sell or Share My Personal Information</a></li>
-                        <li><a href="../" download="Сайт_вигаданого_бренду_енергетичних_напоїв_Omega_Energy_Макеєв_2.docx" class="footer-link">Documentation</a></li>
+                        <li><a href="../Сайт_вигаданого_бренду_енергетичних_напоїв_Omega_Energy_Макеєв_2.docx" download="Сайт_вигаданого_бренду_енергетичних_напоїв_Omega_Energy_Макеєв_2.docx" class="footer-link">Documentation</a></li>
                     </ul>
                 </div>
 
